# irc-core

./: irc-core.cabal
