name:                irc-core
version:             1.2.0 
synopsis:            Console IRC client
description:         Console IRC client
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2016 Eric Mertens
category:            Network
build-type:          Custom
extra-source-files:  ChangeLog.md README.md
cabal-version:       >=1.23
homepage:            https://github.com/glguy/irc-core
bug-reports:         https://github.com/glguy/irc-core/issues
tested-with:         GHC==8.0.1

custom-setup
  setup-depends: base  >=4.9  && <4.10,
                 Cabal >=1.24 && <1.25

source-repository head
  type: git
  location: git://github.com/glguy/irc-core.git
  branch: v2

library
  exposed-modules:
                       Irc.Codes
                       Irc.Commands
                       Irc.Identifier
                       Irc.Message
                       Irc.Modes
                       Irc.RateLimit
                       Irc.RawIrcMsg
                       Irc.UserInfo

  -- other-extensions:
  build-depends:       base                 >=4.9    && <4.10,
                       attoparsec           >=0.13   && <0.14,
                       bytestring           >=0.10.8 && <0.11,
                       hashable             >=1.2.4  && <1.3,
                       lens                 >=4.14   && <4.15,
                       memory               >=0.13   && <0.14,
                       primitive            >=0.6    && <0.7,
                       text                 >=1.2.2  && <1.3,
                       time                 >=1.6    && <1.7,
                       vector               >=0.11   && <0.12

  hs-source-dirs:      src
  default-language:    Haskell2010
